// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar Range renders correctly 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="css-4o92ij-boxStyles-CalendarContainer"
    >
      <div
        class="rdp "
      >
        <div
          class="rdp-months"
        >
          <div
            class="rdp-month rdp-caption_start rdp-caption_end"
          >
            <div
              class="rdp-caption"
            >
              <h2
                aria-atomic="true"
                aria-live="polite"
                class="css-3ucdhc-CaptionLabel"
                id="react-day-picker-4"
              >
                June 2022
              </h2>
              <div
                class="css-4d2b9s-boxStyles"
              >
                <span
                  class="css-1ia12kz-boxStyles"
                >
                  June
                </span>
                <div
                  class="css-1imz916-boxStyles"
                >
                  <div
                    class="css-11igi7-YearSelect"
                  >
                    <label
                      class="css-139npyp-YearSelect"
                      for="calendar-:r2:-year"
                    >
                      Year
                    </label>
                    <select
                      class="css-iqumvh-boxStyles-YearSelect"
                      id="calendar-:r2:-year"
                    >
                      <option>
                        2012
                      </option>
                      <option>
                        2013
                      </option>
                      <option>
                        2014
                      </option>
                      <option>
                        2015
                      </option>
                      <option>
                        2016
                      </option>
                      <option>
                        2017
                      </option>
                      <option>
                        2018
                      </option>
                      <option>
                        2019
                      </option>
                      <option>
                        2020
                      </option>
                      <option>
                        2021
                      </option>
                      <option>
                        2022
                      </option>
                      <option>
                        2023
                      </option>
                      <option>
                        2024
                      </option>
                      <option>
                        2025
                      </option>
                      <option>
                        2026
                      </option>
                      <option>
                        2027
                      </option>
                      <option>
                        2028
                      </option>
                      <option>
                        2029
                      </option>
                      <option>
                        2030
                      </option>
                      <option>
                        2031
                      </option>
                      <option>
                        2032
                      </option>
                    </select>
                    <svg
                      aria-hidden="true"
                      class="css-a48iug-YearSelect"
                      clip-rule="evenodd"
                      focusable="false"
                      height="24"
                      role="img"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <polyline
                        points="6 9 12 15 18 9"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="rdp-nav"
              >
                <button
                  aria-label="Go to previous month"
                  class="rdp-button_reset rdp-button rdp-nav_button rdp-nav_button_previous"
                  name="previous-month"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="css-1mv3vy-Icon"
                    clip-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="15 18 9 12 15 6"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Go to next month"
                  class="rdp-button_reset rdp-button rdp-nav_button rdp-nav_button_next"
                  name="next-month"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="css-1mv3vy-Icon"
                    clip-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="9 18 15 12 9 6"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <table
              aria-labelledby="react-day-picker-4"
              class="rdp-table"
              role="grid"
            >
              <thead
                class="rdp-head"
              >
                <tr
                  class="rdp-head_row"
                >
                  <th
                    class="rdp-head_cell"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Su
                    </span>
                    <span
                      class="rdp-vhidden"
                    >
                      Sunday
                    </span>
                  </th>
                  <th
                    class="rdp-head_cell"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Mo
                    </span>
                    <span
                      class="rdp-vhidden"
                    >
                      Monday
                    </span>
                  </th>
                  <th
                    class="rdp-head_cell"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Tu
                    </span>
                    <span
                      class="rdp-vhidden"
                    >
                      Tuesday
                    </span>
                  </th>
                  <th
                    class="rdp-head_cell"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      We
                    </span>
                    <span
                      class="rdp-vhidden"
                    >
                      Wednesday
                    </span>
                  </th>
                  <th
                    class="rdp-head_cell"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Th
                    </span>
                    <span
                      class="rdp-vhidden"
                    >
                      Thursday
                    </span>
                  </th>
                  <th
                    class="rdp-head_cell"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Fr
                    </span>
                    <span
                      class="rdp-vhidden"
                    >
                      Friday
                    </span>
                  </th>
                  <th
                    class="rdp-head_cell"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Sa
                    </span>
                    <span
                      class="rdp-vhidden"
                    >
                      Saturday
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="rdp-tbody"
              >
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                  />
                  <td
                    class="rdp-cell"
                  />
                  <td
                    class="rdp-cell"
                  />
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="1st June 2022 (Wednesday)"
                      aria-pressed="true"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_start"
                      name="day"
                      tabindex="0"
                      type="button"
                    >
                      1
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="2nd June 2022 (Thursday)"
                      aria-pressed="true"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_middle"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      2
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="3rd June 2022 (Friday)"
                      aria-pressed="true"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_middle"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      3
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="4th June 2022 (Saturday)"
                      aria-pressed="true"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_middle"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      4
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="5th June 2022 (Sunday)"
                      aria-pressed="true"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_middle"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      5
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="6th June 2022 (Monday)"
                      aria-pressed="true"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_middle"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      6
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="7th June 2022 (Tuesday)"
                      aria-pressed="true"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_end"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      7
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="8th June 2022 (Wednesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      8
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="9th June 2022 (Thursday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      9
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="10th June 2022 (Friday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      10
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="11th June 2022 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      11
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="12th June 2022 (Sunday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      12
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="13th June 2022 (Monday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      13
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="14th June 2022 (Tuesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      14
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="15th June 2022 (Wednesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      15
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="16th June 2022 (Thursday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      16
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="17th June 2022 (Friday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      17
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="18th June 2022 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      18
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="19th June 2022 (Sunday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      19
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="20th June 2022 (Monday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      20
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="21st June 2022 (Tuesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      21
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="22nd June 2022 (Wednesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      22
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="23rd June 2022 (Thursday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      23
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="24th June 2022 (Friday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      24
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="25th June 2022 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      25
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="26th June 2022 (Sunday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      26
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="27th June 2022 (Monday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      27
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="28th June 2022 (Tuesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      28
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="29th June 2022 (Wednesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      29
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="30th June 2022 (Thursday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      30
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  />
                  <td
                    class="rdp-cell"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`Calendar Single renders correctly 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="css-1h97ysr-boxStyles-CalendarContainer"
    >
      <div
        class="rdp "
      >
        <div
          class="rdp-months"
        >
          <div
            class="rdp-month rdp-caption_start rdp-caption_end"
          >
            <div
              class="rdp-caption"
            >
              <h2
                aria-atomic="true"
                aria-live="polite"
                class="css-3ucdhc-CaptionLabel"
                id="react-day-picker-1"
              >
                June 2022
              </h2>
              <div
                class="css-4d2b9s-boxStyles"
              >
                <span
                  class="css-1ia12kz-boxStyles"
                >
                  June
                </span>
                <div
                  class="css-1imz916-boxStyles"
                >
                  <div
                    class="css-11igi7-YearSelect"
                  >
                    <label
                      class="css-139npyp-YearSelect"
                      for="calendar-:r0:-year"
                    >
                      Year
                    </label>
                    <select
                      class="css-iqumvh-boxStyles-YearSelect"
                      id="calendar-:r0:-year"
                    >
                      <option>
                        2012
                      </option>
                      <option>
                        2013
                      </option>
                      <option>
                        2014
                      </option>
                      <option>
                        2015
                      </option>
                      <option>
                        2016
                      </option>
                      <option>
                        2017
                      </option>
                      <option>
                        2018
                      </option>
                      <option>
                        2019
                      </option>
                      <option>
                        2020
                      </option>
                      <option>
                        2021
                      </option>
                      <option>
                        2022
                      </option>
                      <option>
                        2023
                      </option>
                      <option>
                        2024
                      </option>
                      <option>
                        2025
                      </option>
                      <option>
                        2026
                      </option>
                      <option>
                        2027
                      </option>
                      <option>
                        2028
                      </option>
                      <option>
                        2029
                      </option>
                      <option>
                        2030
                      </option>
                      <option>
                        2031
                      </option>
                      <option>
                        2032
                      </option>
                    </select>
                    <svg
                      aria-hidden="true"
                      class="css-a48iug-YearSelect"
                      clip-rule="evenodd"
                      focusable="false"
                      height="24"
                      role="img"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <polyline
                        points="6 9 12 15 18 9"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="rdp-nav"
              >
                <button
                  aria-label="Go to previous month"
                  class="rdp-button_reset rdp-button rdp-nav_button rdp-nav_button_previous"
                  name="previous-month"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="css-1mv3vy-Icon"
                    clip-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="15 18 9 12 15 6"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Go to next month"
                  class="rdp-button_reset rdp-button rdp-nav_button rdp-nav_button_next"
                  name="next-month"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="css-1mv3vy-Icon"
                    clip-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="9 18 15 12 9 6"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <table
              aria-labelledby="react-day-picker-1"
              class="rdp-table"
              role="grid"
            >
              <thead
                class="rdp-head"
              >
                <tr
                  class="rdp-head_row"
                >
                  <th
                    class="rdp-head_cell"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Su
                    </span>
                    <span
                      class="rdp-vhidden"
                    >
                      Sunday
                    </span>
                  </th>
                  <th
                    class="rdp-head_cell"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Mo
                    </span>
                    <span
                      class="rdp-vhidden"
                    >
                      Monday
                    </span>
                  </th>
                  <th
                    class="rdp-head_cell"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Tu
                    </span>
                    <span
                      class="rdp-vhidden"
                    >
                      Tuesday
                    </span>
                  </th>
                  <th
                    class="rdp-head_cell"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      We
                    </span>
                    <span
                      class="rdp-vhidden"
                    >
                      Wednesday
                    </span>
                  </th>
                  <th
                    class="rdp-head_cell"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Th
                    </span>
                    <span
                      class="rdp-vhidden"
                    >
                      Thursday
                    </span>
                  </th>
                  <th
                    class="rdp-head_cell"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Fr
                    </span>
                    <span
                      class="rdp-vhidden"
                    >
                      Friday
                    </span>
                  </th>
                  <th
                    class="rdp-head_cell"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Sa
                    </span>
                    <span
                      class="rdp-vhidden"
                    >
                      Saturday
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="rdp-tbody"
              >
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                  />
                  <td
                    class="rdp-cell"
                  />
                  <td
                    class="rdp-cell"
                  />
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="1st June 2022 (Wednesday)"
                      aria-pressed="true"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_selected"
                      name="day"
                      tabindex="0"
                      type="button"
                    >
                      1
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="2nd June 2022 (Thursday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      2
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="3rd June 2022 (Friday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      3
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="4th June 2022 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      4
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="5th June 2022 (Sunday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      5
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="6th June 2022 (Monday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      6
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="7th June 2022 (Tuesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      7
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="8th June 2022 (Wednesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      8
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="9th June 2022 (Thursday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      9
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="10th June 2022 (Friday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      10
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="11th June 2022 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      11
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="12th June 2022 (Sunday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      12
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="13th June 2022 (Monday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      13
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="14th June 2022 (Tuesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      14
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="15th June 2022 (Wednesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      15
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="16th June 2022 (Thursday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      16
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="17th June 2022 (Friday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      17
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="18th June 2022 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      18
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="19th June 2022 (Sunday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      19
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="20th June 2022 (Monday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      20
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="21st June 2022 (Tuesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      21
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="22nd June 2022 (Wednesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      22
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="23rd June 2022 (Thursday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      23
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="24th June 2022 (Friday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      24
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="25th June 2022 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      25
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="26th June 2022 (Sunday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      26
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="27th June 2022 (Monday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      27
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="28th June 2022 (Tuesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      28
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="29th June 2022 (Wednesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      29
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  >
                    <button
                      aria-label="30th June 2022 (Thursday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      30
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                  />
                  <td
                    class="rdp-cell"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;
